--- a/mcmcglmm_significance_testing_BTS.Rmd
+++ b/mcmcglmm_significance_testing_BTS.Rmd
@@ -7,28 +7,343 @@ output: html_notebook
 
 This R notebook details significance testing of heritability and repeatability for 3 traits important to Brown Treesnake control and reproduction: **body condition (BCI)**, **snout-vent length (SVL)**, and **trappabability**. Refer to Levine *et al*. (2019) for details regarding this data set. The pedigree includes 73 dummy individuals.
 
+
 Based off of sensitivity analysis of priors, the priors used for all models assumes phenotypic variation is split evenly between additive genetic, individual permanent environment, and residual variance components with a low degree of belief (n = 0.2).
+
 
 The prior was specified with the code: list(G = list(G1 = list(V =           matrix(p.var/3), nu = 0.2), G2 = list(V = matrix(p.var/3), nu = 0.2)), R = list(V = matrix(p.var/3, nu = 0.2).
 
+
 p.var = phenotypic variance of the trait as estimated from the data.
+
 
 Significance of heritability for each trait was tested by comparing the deviance information criteria for models containing the "animal" term versus those of models without the "animal" term. A lower DIC is indicative of the preferred model, while DIC < 10 are strong evidence of a preferred model (Martin and Festa-Bianchet 2012).
 
+
 Differently, significance of repeatability for each trait was testing by comparing the deviance information criteria for models containing the "individual" term (but not the "animal" term; note: additive genetic variation is a part of individual variation) versus models without the "individual" term.
+
 
 For reduced models, the prior is adjusted to split phenotypic variation evenly among the remaining variance commponents.
 
-#Significance Testing -- Heritability
+
+#1. Significance Testing -- Heritability
 
 ##Body Condition (BCI) Heritability
 ```{r}
 #load model with "animal" term for BCI
 load("BCI_1_dummy_SVLfilt.RData")
 
+#view model to confirm it's correct
+summary(model_BCI1)
+
+#view priors to confirm their correct
+prior_BCI1
+
+#calculate heritability
+herit <- model_BCI1$VCV[, "animal"]/(model_BCI1$VCV[, "animal"] + model_BCI1$VCV[, "ID"] + model_BCI1$VCV[, "units"] )
+
+#HPD intervals for heritability
+x <- HPDinterval(herit)
+
+#cat heritability estimate with 95% HPD
+cat("The heritability estimate for BCI is: ", round(posterior.mode(herit), digits = 3), "(", round(x[,1], digits = 3), "-", round(x[,2], digits = 3), ")", "\n")
+
 #extract DIC from model with "animal" term
 DIC_full <- model_BCI1$DIC
 
+#load model without "animal" term for BCI 
+load("BCI_1_SVLfilt_noVa.RData") #note: over-writing earlier BCI model
+
+#view model to confirm it's correct
+summary(model_BCI1)
+
+#view priors to confirm they're correct
+prior_BCI1
+
+#extract DIC for model without "animal" term for BCI
+DIC_reduced <- model_BCI1$DIC
+
+#cat statement about the DICs of the models
+cat("The DIC of the model with the animal term is: ", round(DIC_full, digits = 3), "\n", "The DIC of the model without the animal term is: ", round(DIC_reduced, digits = 3), "\n\n\n")
+
+#calculate difference between DICs
+diff <- DIC_reduced - DIC_full
+
+#test whether heritability is significant
+if(diff >= 10) {
+  cat("BCI model with animal term has significantly smaller DIC:", diff >= 10, "\n", "BCI has significant heritability.\n") 
+} else {
+  cat("BCI model with animal term has significantly smaller DIC:", diff >= 10, "\n", "BCI does not have significant heritability.")
+}
 
 ```
 
+
+##Snout-Vent Length (SVL) Heritability
+```{r}
+#clear memory
+rm(list=ls())
+
+#load model with "animal" term for SVL
+load("SVL_1_dummy_SVLfilt.RData")
+
+#view model to confirm it's correct
+summary(model_SVL1)
+
+#view priors to confirm they're correct
+prior_SVL1
+
+#calculate heritability
+herit <- model_SVL1$VCV[, "animal"]/(model_SVL1$VCV[, "animal"] + model_SVL1$VCV[, "ID"] + model_SVL1$VCV[, "units"] )
+
+#HPD intervals for heritability
+x <- HPDinterval(herit)
+
+#cat heritability estimate with 95% HPD
+cat("The heritability estimate for SVL is: ", round(posterior.mode(herit), digits = 3), "(", round(x[,1], digits = 3), "-", round(x[,2], digits = 3), ")", "\n")
+
+#extract DIC from model with "animal" term
+DIC_full <- model_SVL1$DIC
+
+#load model without "animal" term for SVL 
+load("SVL_1_SVLfilt_noVa.RData") #note: over-writing earlier SVL model
+
+#view model to confirm it's correct
+summary(model_SVL1)
+
+#view priors to confirm they're correct
+prior_SVL1
+
+#extract DIC for model without "animal" term for BCI
+DIC_reduced <- model_SVL1$DIC
+
+#cat statement about the DICs of the models
+cat("The DIC of the model with the animal term is: ", round(DIC_full, digits = 3), "\n", "The DIC of the model without the animal term is: ", round(DIC_reduced, digits = 3), "\n\n\n")
+
+#calculate difference between DICs
+diff <- DIC_reduced - DIC_full
+
+#test whether heritability is significant
+if(diff >= 10) {
+  cat("SVL model with animal term has significantly smaller DIC:", diff >= 10, "\n", "SVL has significant heritability.\n") 
+} else {
+  cat("SVL model with animal term has significantly smaller DIC:", diff >= 10, "\n", "SVL does not have significant heritability.")
+}
+
+```
+
+##Trappability (TRAP) Heritability
+```{r}
+#clear memory
+rm(list=ls())
+
+#load model with "animal" term for Trappability
+load("TRAP_1_dummy_SVLfilt.RData")
+
+#view model to confirm it's correct
+summary(model_TRAP1)
+
+#view priors to confirm they're correct
+prior_TRAP1
+
+#calculate heritability
+herit <- model_TRAP1$VCV[, "animal"]/(model_TRAP1$VCV[, "animal"] + model_TRAP1$VCV[, "ID"] + model_TRAP1$VCV[, "units"] )
+
+#HPD intervals for heritability
+x <- HPDinterval(herit)
+
+#cat heritability estimate with 95% HPD
+cat("The heritability estimate for trappability is: ", round(posterior.mode(herit), digits = 3), "(", round(x[,1], digits = 3), "-", round(x[,2], digits = 3), ")", "\n")
+
+#extract DIC from model with "animal" term
+DIC_full <- model_TRAP1$DIC
+
+#load model without "animal" term for trappability
+load("TRAP_1_SVLfilt_noVa.RData") #note: over-writing earlier trappability model
+
+#view model to confirm it's correct
+summary(model_TRAP1)
+
+#view priors to confirm they're correct
+prior_TRAP1
+
+#extract DIC for model without "animal" term for trappability
+DIC_reduced <- model_TRAP1$DIC
+
+#cat statement about the DICs of the models
+cat("The DIC of the model with the animal term is: ", round(DIC_full, digits = 3), "\n", "The DIC of the model without the animal term is: ", round(DIC_reduced, digits = 3), "\n\n\n")
+
+#calculate difference between DICs
+diff <- DIC_reduced - DIC_full
+
+#test whether heritability is significant
+if(diff >= 10) {
+  cat("Trappability model with animal term has significantly smaller DIC:", diff >= 10, "\n", "Trappability has significant heritability.\n") 
+} else {
+  cat("Trappability model with animal term has significantly smaller DIC:", diff >= 10, "\n", "Trappability does not have significant heritability.")
+}
+
+```
+
+
+#2. Significance Testing - Repeatability
+
+##Body Condition (BCI) Repeatability
+```{r}
+#clear memory
+rm(list=ls())
+
+#load model with only "individual" term
+load("BCI_1_SVLfilt_noVa.RData")
+
+#view model to confirm it's correct
+summary(model_BCI1)
+
+#view priors to confirm their correct
+prior_BCI1
+
+#calculate repeatability
+repeatability <- model_BCI1$VCV[, "ID"]/(model_BCI1$VCV[, "ID"] + model_BCI1$VCV[, "units"] )
+
+#HPD intervals for repeatability
+x <- HPDinterval(repeatability)
+
+#cat statement about repeatability with 95% HPD
+cat("The repeatability estimate for BCI is: ", round(posterior.mode(repeatability), digits = 3), "(", round(x[,1], digits = 3), "-", round(x[,2], digits = 3), ")", "\n")
+
+#extract DIC from model with "ID" term
+DIC_full <- model_BCI1$DIC
+
+#load model without "ID" term for BCI 
+load("BCI_1_SVLfilt_noVa_noI.RData") #note: over-writing earlier BCI model
+
+#view model to confirm it's correct
+summary(model_BCI1)
+
+#view priors to confirm they're correct
+prior_BCI1
+
+#extract DIC for model without "ID" term for BCI
+DIC_reduced <- model_BCI1$DIC
+
+#cat statement about the DICs of the models
+cat("The DIC of the model with the ID term is: ", round(DIC_full, digits = 3), "\n", "The DIC of the model without the ID term is: ", round(DIC_reduced, digits = 3), "\n\n\n")
+
+#calculate difference between DICs
+diff <- DIC_reduced - DIC_full
+
+#test whether repeatability is significant
+if(diff >= 10) {
+  cat("BCI model with ID term has significantly smaller DIC:", diff >= 10, "\n", "BCI has significant repeatability.\n") 
+} else {
+  cat("BCI model with ID term has significantly smaller DIC:", diff >= 10, "\n", "BCI does not have significant repeatability.")
+}
+
+```
+
+##Snout-Vent Length (SVL) Repeatability
+```{r}
+#clear memory
+rm(list=ls())
+
+#load model with only "individual" term
+load("SVL_1_SVLfilt_noVa.RData")
+
+#view model to confirm it's correct
+summary(model_SVL1)
+
+#view priors to confirm their correct
+prior_SVL1
+
+#calculate repeatability
+repeatability <- model_SVL1$VCV[, "ID"]/(model_SVL1$VCV[, "ID"] + model_SVL1$VCV[, "units"] )
+
+#HPD intervals for repeatability
+x <- HPDinterval(repeatability)
+
+#cat statement about SVL repeatability with 95% HPD
+cat("The repeatability estimate for SVL is: ", round(posterior.mode(repeatability), digits = 3), "(", round(x[,1], digits = 3), "-", round(x[,2], digits = 3), ")", "\n")
+
+#extract DIC from model with "ID" term
+DIC_full <- model_SVL1$DIC
+
+#load model without "ID" term for SVL 
+load("SVL_1_SVLfilt_noVa_noI.RData") #note: over-writing earlier SVL model
+
+#view model to confirm it's correct
+summary(model_SVL1)
+
+#view priors to confirm they're correct
+prior_SVL1
+
+#extract DIC for model without "ID" term for SVL
+DIC_reduced <- model_SVL1$DIC
+
+#cat statement about the DICs of the models
+cat("The DIC of the model with the ID term is: ", round(DIC_full, digits = 3), "\n", "The DIC of the model without the ID term is: ", round(DIC_reduced, digits = 3), "\n\n\n")
+
+#calculate difference between DICs
+diff <- DIC_reduced - DIC_full
+
+#test whether trappability is significant
+if(diff >= 10) {
+  cat("SVL model with ID term has significantly smaller DIC:", diff >= 10, "\n", "SVL has significant repeatability.\n") 
+} else {
+  cat("SVL model with ID term has significantly smaller DIC:", diff >= 10, "\n", "SVL does not have significant repeatability.")
+}
+
+```
+
+
+##Trappability (TRAP) Repeatability
+```{r}
+#clear memory
+rm(list=ls())
+
+#load model with only "individual" term
+load("TRAP_1_SVLfilt_noVa.RData")
+
+#view model to confirm it's correct
+summary(model_TRAP1)
+
+#view priors to confirm their correct
+prior_TRAP1
+
+#calculate repeatability
+repeatability <- model_TRAP1$VCV[, "ID"]/(model_TRAP1$VCV[, "ID"] + model_TRAP1$VCV[, "units"] )
+
+#HPD intervals for repeatability
+x <- HPDinterval(repeatability)
+
+#cat statement about repeatability with 95% HPD
+cat("The repeatability estimate for Trappability is: ", round(posterior.mode(repeatability), digits = 3), "(", round(x[,1], digits = 3), "-", round(x[,2], digits = 3), ")", "\n")
+
+#extract DIC from model with "ID" term
+DIC_full <- model_TRAP1$DIC
+
+#load model without "ID" term for Trappability 
+load("TRAP_1_SVLfilt_noVa_noI.RData") #note: over-writing earlier Trappability model
+
+#view model to confirm it's correct
+summary(model_TRAP1)
+
+#view priors to confirm they're correct
+prior_TRAP1
+
+#extract DIC for model without "animal" term for trappabilitt
+DIC_reduced <- model_TRAP1$DIC
+
+#cat statement about the DICs of the models
+cat("The DIC of the model with the ID term is: ", round(DIC_full, digits = 3), "\n", "The DIC of the model without the ID term is: ", round(DIC_reduced, digits = 3), "\n\n\n")
+
+#calculate difference between DICs
+diff <- DIC_reduced - DIC_full
+
+#test whether repeatability is significant
+if(diff >= 10) {
+  cat("Trappability model with ID term has significantly smaller DIC:", diff >= 10, "\n", "BCI has significant repeatability.\n") 
+} else {
+  cat("Trappability model with ID term has significantly smaller DIC:", diff >= 10, "\n", "Trappability does not have significant repeatability.")
+}
+
+```
