--- a/mcmcglmm_diagnostics.Rmd
+++ b/mcmcglmm_diagnostics.Rmd
@@ -264,6 +264,126 @@ repeatability <- (model_SVL2$VCV[, "animal"] + model_SVL2$VCV[, "ID"])/(model_SV
 #view posterior mode of repeatability
 cat("Posterior Mode of Repeatability for SVL2: ",round(posterior.mode(repeatability), digits = 3) )
 ```
+##SVL1 -- Age fixed
+```{r}
+#clear memory
+rm(list=ls())
+
+#load R output
+load("SVL_1_dummy_SVLfilt2.RData")
+
+#set the dimensions for the graphics
+par(mar=c(1,1,1,1))
+
+#view model
+summary(model_SVL1)
+
+#view priors for model
+prior_SVL1
+
+#view trace plots for fixed effects
+plot(model_SVL1$Sol)
+
+#view trace plots for random effects
+plot(model_SVL1$VCV)
+
+#view autocorrelation for fixed effects
+autocorr.diag(model_SVL1$Sol)
+
+#view autocorrelation for random effects
+autocorr.diag(model_SVL1$VCV)
+
+#view effective size for fixed effects
+effectiveSize(model_SVL1$Sol)
+
+#view effective size for random effects
+effectiveSize(model_SVL1$VCV)
+
+#test for convergence of fixed effect
+heidel.diag(model_SVL1$Sol)
+
+#test for convergence of random effect
+heidel.diag(model_SVL1$VCV)
+
+#view posterior mode of additive genetic variance
+cat("Posterior Mode of Additive Genetic Variance for SVL1 (age fixed): ", round(posterior.mode(model_SVL1$VCV[, "animal"]), digits = 3))
+
+#view posterior mode of individual
+cat("Posterior Mode of Individual Variance for SVL1 (age fixed): ", round(posterior.mode(model_SVL1$VCV[, "ID"]), digits = 3))
+
+#calculate heritability
+herit <- model_SVL1$VCV[, "animal"]/(model_SVL1$VCV[, "animal"] + model_SVL1$VCV[, "ID"] + model_SVL1$VCV[, "units"] )
+
+#view posterior mode of heritability
+cat("Posterior Mode of Heritability for SVL1 (age fixed): ",round(posterior.mode(herit), digits = 3) )
+
+#calculate repeatability
+repeatability <- (model_SVL1$VCV[, "animal"] + model_SVL1$VCV[, "ID"])/(model_SVL1$VCV[, "animal"] + model_SVL1$VCV[, "ID"] + model_SVL1$VCV[, "units"])
+
+#view posterior mode of repeatability
+cat("Posterior Mode of Repeatability for SVL1 (age fixed): ",round(posterior.mode(repeatability), digits = 3) )
+```
+
+##SVL2 -- Age fixed
+```{r}
+#clear memory
+rm(list=ls())
+
+#load R output
+load("SVL_2_dummy_SVLfilt2.RData")
+
+#set the dimensions for the graphics
+par(mar=c(1,1,1,1))
+
+#view model
+summary(model_SVL2)
+
+#view priors for model
+prior_SVL2
+
+#view trace plots for fixed effects
+plot(model_SVL2$Sol)
+
+#view trace plots for random effects
+plot(model_SVL2$VCV)
+
+#view autocorrelation for fixed effects
+autocorr.diag(model_SVL2$Sol)
+
+#view autocorrelation for random effects
+autocorr.diag(model_SVL2$VCV)
+
+#view effective size for fixed effects
+effectiveSize(model_SVL2$Sol)
+
+#view effective size for random effects
+effectiveSize(model_SVL2$VCV)
+
+#test for convergence of fixed effect
+heidel.diag(model_SVL2$Sol)
+
+#test for convergence of random effect
+heidel.diag(model_SVL2$VCV)
+
+#view posterior mode of additive genetic variance
+cat("Posterior Mode of Additive Genetic Variance for SVL2 (age fixed): ", round(posterior.mode(model_SVL2$VCV[, "animal"]), digits = 3))
+
+#view posterior mode of individual
+cat("Posterior Mode of Individual Variance for SVL2 (age fixed): ", round(posterior.mode(model_SVL2$VCV[, "ID"]), digits = 3))
+
+#calculate heritability
+herit <- model_SVL2$VCV[, "animal"]/(model_SVL2$VCV[, "animal"] + model_SVL2$VCV[, "ID"] + model_SVL2$VCV[, "units"] )
+
+#view posterior mode of heritability
+cat("Posterior Mode of Heritability for SVL2 (age fixed): ",round(posterior.mode(herit), digits = 3) )
+
+#calculate repeatability
+repeatability <- (model_SVL2$VCV[, "animal"] + model_SVL2$VCV[, "ID"])/(model_SVL2$VCV[, "animal"] + model_SVL2$VCV[, "ID"] + model_SVL2$VCV[, "units"])
+
+#view posterior mode of repeatability
+cat("Posterior Mode of Repeatability for SVL2 (age fixed): ",round(posterior.mode(repeatability), digits = 3) )
+```
+
 
 #MCMCglmm Diagnostics for Trappability--
 
